--- a/requirements.txt
+++ b/requirements.txt
@@ -62,9 +62,6 @@ tensorboard==2.11.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 thop==0.1.1.post2209072238
-torch==1.13.0+cu116
-torchaudio==0.13.0+cu116
-torchvision==0.14.0+cu116
 tqdm==4.64.1
 traitlets==5.5.0
 typing_extensions==4.4.0
@@ -75,3 +72,9 @@ Werkzeug==2.2.2
 wincertstore==0.2
 wrapt==1.14.1
 zipp==3.10.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.13.0+cu116
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torchaudio==0.13.0+cu116
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.14.0+cu116
